Added is-left helper class where there is an is-right class available
Fixes #2

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -53,6 +53,10 @@ $breadcrumb-item-separator-color: $grey-light !default
     ol,
     ul
       justify-content: flex-end
+  &.is-left
+    ol,
+    ul
+      justify-content: flex-start
   // Sizes
   &.is-small
     font-size: $size-small
