--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -25,6 +25,10 @@ $dropdown-divider-background-color: $border !default
     .dropdown-menu
       left: auto
       right: 0
+  &.is-left
+    .dropdown-menu
+      left: 0
+      right: auto
   &.is-up
     .dropdown-menu
       bottom: 100%
