--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -371,6 +371,9 @@ a.navbar-item,
     &.is-right
       left: auto
       right: 0
+    &.is-left
+      right: auto
+      left: 0
   .navbar-divider
     display: block
   .navbar > .container,
