--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -141,3 +141,11 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
       .pagination-list
         justify-content: flex-end
         order: 3
+    &.is-left
+      .pagination-list
+        justify-content: flex-start
+        order: 1
+      .pagination-previous
+        order: 2
+      .pagination-next
+        order: 3
