--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -253,3 +253,5 @@ $button-static-border-color: $grey-lighter !default
     justify-content: center
   &.is-right
     justify-content: flex-end
+  &.is-left
+    justify-content: flex-start
