--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -335,6 +335,14 @@ $help-size: $size-small !default
       border-radius: $file-radius 0 0 $file-radius
       border-width: 1px 0 1px 1px
       order: -1
+  &.is-left
+    justify-content: flex-start
+    .file-cta
+      border-radius: 0 0 $file-radius $file-radius
+    .file-name
+      border-radius: $file-radius $file-radius 0 0
+      border-width: 1px 1px 1px 0
+      order: 1
 
 .file-label
   align-items: stretch
