--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -37,6 +37,13 @@ $tag-delete-margin: 1px !default
         margin-left: 0.5rem
       &:not(:last-child)
         margin-right: 0
+  &.is-left
+    justify-content: flex-start
+    .tag
+      &:not(:first-child)
+        margin-left: 0
+      &:not(:last-child)
+        margin-right: 0.5rem
 
 .tag:not(body)
   align-items: center
