--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -457,14 +457,11 @@ meta:
 
   <div class="bd-example is-fullwidth">
     {% include examples/navbar-basic.html %}
-    <section class="hero is-success is-fullheight-with-navbar">
+    <section class="hero is-link is-fullheight-with-navbar">
       <div class="hero-body">
         <div class="container">
           <p class="title">
-            Fullheight title
-          </p>
-          <p class="subtitle">
-            Fullheight subtitle
+            Fullheight hero with navbar
           </p>
         </div>
       </div>
@@ -472,15 +469,12 @@ meta:
   </div>
 
 {% highlight html %}
-<section class="hero is-success is-fullheight">
+<section class="hero is-link is-fullheight">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        Fullheight title
+        Fullheight hero with navbar
       </h1>
-      <h2 class="subtitle">
-        Fullheight subtitle
-      </h2>
     </div>
   </div>
 </section>
