--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -356,6 +356,7 @@ $help-size: $size-small !default
 .file-input
   height: 100%
   left: 0
+  opacity: 0
   outline: none
   position: absolute
   top: 0
