--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -70,18 +70,19 @@ $content-table-foot-cell-color: $text-strong !default
     border-left: $content-blockquote-border-left
     padding: $content-blockquote-padding
   ol
-    list-style: decimal outside
+    list-style-position: outside
     margin-left: 2em
     margin-top: 1em
-    // list style modifiers emulating ol[type] attribute values different then decimal
-    &.is-lower-roman
-      list-style-type: lower-roman
-    &.is-upper-roman
-      list-style-type: upper-roman
-    &.is-lower-alpha
-      list-style-type: lower-alpha
-    &.is-upper-alpha
-      list-style-type: upper-alpha
+    &:not([type])
+      list-style-type: decimal
+      &.is-lower-alpha
+        list-style-type: lower-alpha
+      &.is-lower-roman
+        list-style-type: lower-roman
+      &.is-upper-alpha
+        list-style-type: upper-alpha
+      &.is-upper-roman
+        list-style-type: upper-roman
   ul
     list-style: disc outside
     margin-left: 2em
