--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,4 +1,6 @@
-$card-color: $text !default
+@import '../utilities/_all.sass'
+
+  $card-color: $text !default
 $card-background-color: $white !default
 $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
 
