--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -1,4 +1,6 @@
-$dropdown-content-background-color: $white !default
+@import '../utilities/_all.sass'
+
+  $dropdown-content-background-color: $white !default
 $dropdown-content-arrow: $link !default
 $dropdown-content-offset: 4px !default
 $dropdown-content-radius: $radius !default
