--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -1,4 +1,6 @@
-$list-background-color: $white !default
+@import '../utilities/_all.sass'
+
+  $list-background-color: $white !default
 $list-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
 $list-radius: $radius !default
 
