--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -1,4 +1,6 @@
-$menu-item-color: $text !default
+@import '../utilities/_all.sass'
+
+  $menu-item-color: $text !default
 $menu-item-radius: $radius-small !default
 $menu-item-hover-color: $text-strong !default
 $menu-item-hover-background-color: $background !default
