--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,4 +1,6 @@
-$message-background-color: $background !default
+@import '../utilities/_all.sass'
+
+  $message-background-color: $background !default
 $message-radius: $radius !default
 
 $message-header-background-color: $text !default
