--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,4 +1,6 @@
-$modal-z: 40 !default
+@import '../utilities/_all.sass'
+
+  $modal-z: 40 !default
 
 $modal-background-background-color: rgba($black, 0.86) !default
 
