--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -1,4 +1,6 @@
-$navbar-background-color: $white !default
+@import '../utilities/_all.sass'
+
+  $navbar-background-color: $white !default
 $navbar-box-shadow-size: 0 2px 0 0 !default
 $navbar-box-shadow-color: $background !default
 $navbar-height: 3.25rem !default
