--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -1,4 +1,6 @@
-$pagination-color: $grey-darker !default
+@import '../utilities/_all.sass'
+
+  $pagination-color: $grey-darker !default
 $pagination-border-color: $grey-lighter !default
 $pagination-margin: -0.25rem !default
 $pagination-min-width: $control-height !default
