--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,4 +1,6 @@
-$panel-item-border: 1px solid $border !default
+@import '../utilities/_all.sass'
+
+  $panel-item-border: 1px solid $border !default
 
 $panel-heading-background-color: $background !default
 $panel-heading-color: $text-strong !default
