--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,4 +1,6 @@
-$tabs-border-bottom-color: $border !default
+@import '../utilities/_all.sass'
+
+  $tabs-border-bottom-color: $border !default
 $tabs-border-bottom-style: solid !default
 $tabs-border-bottom-width: 1px !default
 $tabs-link-color: $text !default
