--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,4 +1,6 @@
-$button-color: $grey-darker !default
+@import '../utilities/_all.sass'
+
+  $button-color: $grey-darker !default
 $button-background-color: $white !default
 
 $button-border-color: $grey-lighter !default
