--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,4 +1,6 @@
-$content-heading-color: $text-strong !default
+@import '../utilities/_all.sass'
+
+  $content-heading-color: $text-strong !default
 $content-heading-weight: $weight-semibold !default
 $content-heading-line-height: 1.125 !default
 
