--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,4 +1,6 @@
-$icon-dimensions: 1.5rem !default
+@import '../utilities/_all.sass'
+
+  $icon-dimensions: 1.5rem !default
 $icon-dimensions-small: 1rem !default
 $icon-dimensions-medium: 2rem !default
 $icon-dimensions-large: 3rem !default
