--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -1,4 +1,6 @@
-$dimensions: 16 24 32 48 64 96 128 !default
+@import '../utilities/_all.sass'
+
+  $dimensions: 16 24 32 48 64 96 128 !default
 
 .image
   display: block
