--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,4 +1,6 @@
-$progress-bar-background-color: $border !default
+@import '../utilities/_all.sass'
+
+  $progress-bar-background-color: $border !default
 $progress-value-background-color: $text !default
 
 .progress
