--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -1,4 +1,6 @@
-$table-color: $grey-darker !default
+@import '../utilities/_all.sass'
+
+  $table-color: $grey-darker !default
 $table-background-color: $white !default
 
 $table-cell-border: 1px solid $grey-lighter !default
