--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -1,4 +1,6 @@
-$tag-background-color: $background !default
+@import '../utilities/_all.sass'
+
+  $tag-background-color: $background !default
 $tag-color: $text !default
 $tag-radius: $radius !default
 $tag-delete-margin: 1px !default
