--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,4 +1,6 @@
-$title-color: $grey-darker !default
+@import '../utilities/_all.sass'
+
+  $title-color: $grey-darker !default
 $title-size: $size-3 !default
 $title-weight: $weight-semibold !default
 $title-line-height: 1.125 !default
