--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,4 +1,6 @@
-$body-background-color: $white !default
+@import '../utilities/_all.sass'
+
+  $body-background-color: $white !default
 $body-size: 16px !default
 $body-rendering: optimizeLegibility !default
 $body-family: $family-primary !default
