--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,4 +1,6 @@
-$box-color: $text !default
+@import '../utilities/_all.sass'
+
+  $box-color: $text !default
 $box-background-color: $white !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
