--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,4 +1,6 @@
-$notification-background-color: $background !default
+@import '../utilities/_all.sass'
+
+  $notification-background-color: $background !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
