--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -1,3 +1,5 @@
+@import '../utilities/_all.sass'
+
 $section-padding: 3rem 1.5rem !default
 $section-padding-medium: 9rem 1.5rem !default
 $section-padding-large: 18rem 1.5rem !default
