Fix relative links

--- a/docs/_includes/book/book-content.html
+++ b/docs/_includes/book/book-content.html
@@ -41,13 +41,13 @@
       <a class="button bd-is-bleeding is-large" href="{{ site.data.meta.book_url }}" target="_blank" rel="nofollow">
         <span>
           <em>PDF + Epub + Mobi</em>
-          <strong>Buy</strong> from <img src="/images/book/bleedingedge-type.png">
+          <strong>Buy</strong> from <img src="{{ site.url }}/images/book/bleedingedge-type.png">
         </span>
       </a>
       <a class="button bd-is-amazon is-large" href="{{ site.data.meta.book_amazon }}" target="_blank" rel="nofollow">
         <span>
           <em>Kindle version</em>
-          <strong>Buy</strong> from <img src="/images/book/amazon-logo.png">
+          <strong>Buy</strong> from <img src="{{ site.url }}/images/book/amazon-logo.png">
         </span>
       </a>
     </div>
