--- a/docs/_includes/global/deprecated.html
+++ b/docs/_includes/global/deprecated.html
@@ -2,7 +2,7 @@
   <div class="notification is-info" style="border-radius: 0; margin-bottom: 0;">
     <p>
       You are viewing the deprecated <strong>{{site.data.meta.version}}</strong> version of the website.
-      <a href="/">Click here to view the latest version</a>
+      <a href="{{ site.url }}/">Click here to view the latest version</a>
     </p>
   </div>
 {% endif %}
