--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -368,11 +368,11 @@ meta:
 
 {% capture navbar_dropup_snippet %}
 <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
-  <a class="navbar-link" href="/documentation/overview/start/">
+  <a class="navbar-link" href="{{ site.url }}/documentation/overview/start/">
     Docs
   </a>
   <div class="navbar-dropdown">
-    <a class="navbar-item" href="/documentation/overview/start/">
+    <a class="navbar-item" href="{{ site.url }}/documentation/overview/start/">
       Overview
     </a>
   </div>
