Remove semicolon, because SASS.
This is SASS, not SCSS.

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -49,7 +49,7 @@ $help-size: $size-small !default
   border-color: $input-border-color
   color: $input-color
   +placeholder
-    color: $input-placeholder-color;
+    color: $input-placeholder-color
   &:hover,
   &.is-hovered
     border-color: $input-hover-border-color
