Add secondary and tertiary font families to derived-variables.sass

--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -67,6 +67,8 @@ $link-active-border: $grey-dark !default
 // Typography
 
 $family-primary: $family-sans-serif !default
+$family-secondary: $family-sans-serif !default
+$family-tertiary: $family-sans-serif !default
 $family-code: $family-monospace !default
 
 $size-small: $size-7 !default
