Add font family helpers to helpers.sass

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -119,6 +119,19 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-weight: $weight-semibold !important
 .has-text-weight-bold
   font-weight: $weight-bold !important
+  
+.has-font-primary
+  font-family: $family-primary !important
+.has-font-secondary
+  font-family: $family-secondary !important
+.has-font-tertiary
+  font-family: $family-tertiary !important
+.has-font-sans-serif
+  font-family: $family-sans-serif !important
+.has-font-monospace
+  font-family: $family-monospace !important
+.has-font-code
+  font-family: $family-code !important
 
 // Visibility
 
