Add classes for reverse flex row/column

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -8734,6 +8734,14 @@ label.panel-block:hover {
   align-items: center;
 }
 
+.columns.is-row-reversed {
+  flex-direction: row-reverse;
+}
+
+.columns.is-column-reversed {
+  flex-direction: column-reverse;
+}
+
 @media screen and (min-width: 769px), print {
   .columns:not(.is-desktop) {
     display: flex;
