--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -455,6 +455,10 @@ $column-gap: 0.75rem !default
     flex-wrap: wrap
   &.is-vcentered
     align-items: center
+  &.is-row-reversed
+    flex-direction: row-reverse
+  &.is-column-reversed
+    flex-direction: column-reverse
   // Responsiveness
   +tablet
     &:not(.is-desktop)
