#2091 remove css rule which causes has-addons to not work correctly

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4941,7 +4941,7 @@ a.box:active {
 }
 
 .tags.is-right .tag:not(:first-child) {
-  margin-left: 0.5rem;
+  margin-left: 0;
 }
 
 .tags.is-right .tag:not(:last-child) {
