--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -34,7 +34,7 @@ $tag-delete-margin: 1px !default
     justify-content: flex-end
     .tag
       &:not(:first-child)
-        margin-left: 0.5rem
+        margin-left: 0
       &:not(:last-child)
         margin-right: 0
 
