Makes is-full-height-with-navbar samples match

--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -469,12 +469,12 @@ meta:
   </div>
 
 {% highlight html %}
-<section class="hero is-link is-fullheight">
+<section class="hero is-link is-fullheight-with-navbar">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title">
+      <p class="title">
         Fullheight hero with navbar
-      </h1>
+      </p>
     </div>
   </div>
 </section>
