The Details disclosure element fixes (#1978)
* The Details disclosure element fixes

* Update form.sass

``display: flex`` removed

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -548,6 +548,7 @@ $help-size: $size-small !default
   font-size: $size-normal
   position: relative
   text-align: left
+  box-sizing: border-box
   // Modifiers
   // DEPRECATED
   &.has-icon
