Fix variables component, Fix doc tabs

--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -72,19 +72,30 @@
 
 .bd-tabs
   margin-bottom: $main-spacing
-  .tabs
-    overflow: visible
-    ul,
-    a
-      border-bottom-color: $white-ter
-      border-bottom-width: 2px
-    ul
-      flex-wrap: wrap
-      max-width: 100%
-    a
-      margin-bottom: -2px
-    li:not(.is-active) a:hover
-        border-bottom-color: $border
+
++mobile
+  .bd-tabs
+    margin-left: -1.5rem
+    margin-right: -1.5rem
+    .tabs
+      ul
+        flex-wrap: nowrap
+
++tablet
+  .bd-tabs
+    .tabs
+      overflow: visible
+      ul,
+      a
+        border-bottom-color: $white-ter
+        border-bottom-width: 2px
+      a
+        margin-bottom: -2px
+      li:not(.is-active) a:hover
+          border-bottom-color: $border
+      ul
+        flex-wrap: wrap
+        max-width: 100%
 
 .bd-content
   hr:first-child
