#2091 remove css rule which causes has-addons to not work correctly

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4913,20 +4913,6 @@ a.box:active {
   margin-bottom: 1rem;
 }
 
-.tags.has-addons .tag {
-  margin-right: 0;
-}
-
-.tags.has-addons .tag:not(:first-child) {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-}
-
-.tags.has-addons .tag:not(:last-child) {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
 .tags.is-centered {
   justify-content: center;
 }
@@ -4941,11 +4927,26 @@ a.box:active {
 }
 
 .tags.is-right .tag:not(:first-child) {
-  margin-left: 0;
+  margin-left: 0.5rem;
 }
 
 .tags.is-right .tag:not(:last-child) {
   margin-right: 0;
+}
+
+.tags.has-addons .tag {
+  margin-right: 0;
+}
+
+.tags.has-addons .tag:not(:first-child) {
+  margin-left: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.tags.has-addons .tag:not(:last-child) {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .tag:not(body) {
