Remove $family-tertiary, change has-font to is-family, and update docs.

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -119,18 +119,20 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-weight: $weight-semibold !important
 .has-text-weight-bold
   font-weight: $weight-bold !important
-  
-.has-font-primary
+
+.is-family-primary
   font-family: $family-primary !important
-.has-font-secondary
+
+.is-family-secondary
   font-family: $family-secondary !important
-.has-font-tertiary
-  font-family: $family-tertiary !important
-.has-font-sans-serif
+
+.is-family-sans-serif
   font-family: $family-sans-serif !important
-.has-font-monospace
+
+.is-family-monospace
   font-family: $family-monospace !important
-.has-font-code
+
+.is-family-code
   font-family: $family-code !important
 
 // Visibility
