--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -22,8 +22,8 @@ $content-table-foot-cell-color: $text-strong !default
   // Inline
   li + li
     margin-top: 0.25em
-  .tabs li + li 
-    margin-top: 0  
+    &:not(.tabs)
+      margin-top: 0
   // Block
   p,
   dl,
