Add family configuration for simple elements

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -2,6 +2,8 @@ $breadcrumb-item-color: $link !default
 $breadcrumb-item-hover-color: $link-hover !default
 $breadcrumb-item-active-color: $text-strong !default
 
+$breadcrumb-family: $family-secondary !default
+
 $breadcrumb-item-padding-vertical: 0 !default
 $breadcrumb-item-padding-horizontal: 0.75em !default
 
@@ -10,6 +12,7 @@ $breadcrumb-item-separator-color: $grey-light !default
 .breadcrumb
   @extend %block
   @extend %unselectable
+  font-family: $breadcrumb-family
   font-size: $size-normal
   white-space: nowrap
   a
