--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -1,4 +1,5 @@
 $menu-item-color: $text !default
+$menu-item-family: $family-primary !default
 $menu-item-radius: $radius-small !default
 $menu-item-hover-color: $text-strong !default
 $menu-item-hover-background-color: $background !default
@@ -8,6 +9,7 @@ $menu-item-active-background-color: $link !default
 $menu-list-border-left: 1px solid $border !default
 
 $menu-label-color: $text-light !default
+$menu-label-family: $family-secondary !default
 
 .menu
   font-size: $size-normal
@@ -24,6 +26,7 @@ $menu-label-color: $text-light !default
   a
     border-radius: $menu-item-radius
     color: $menu-item-color
+    font-family: $menu-item-family
     display: block
     padding: 0.5em 0.75em
     &:hover
@@ -41,6 +44,7 @@ $menu-label-color: $text-light !default
 
 .menu-label
   color: $menu-label-color
+  font-family: $menu-label-family
   font-size: 0.75em
   letter-spacing: 0.1em
   text-transform: uppercase
