--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -6,6 +6,7 @@ $tabs-link-hover-border-bottom-color: $text-strong !default
 $tabs-link-hover-color: $text-strong !default
 $tabs-link-active-border-bottom-color: $link !default
 $tabs-link-active-color: $link !default
+$tabs-link-family: $family-secondary !default
 $tabs-link-padding: 0.5em 1em !default
 
 $tabs-boxed-link-radius: $radius !default
@@ -32,6 +33,7 @@ $tabs-toggle-link-active-color: $link-invert !default
   @extend %unselectable
   align-items: stretch
   display: flex
+  font-family: $tabs-link-family
   font-size: $size-normal
   justify-content: space-between
   overflow: hidden
