--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -7,6 +7,8 @@ $button-border-width: $control-border-width !default
 $button-padding-vertical: calc(0.375em - #{$button-border-width}) !default
 $button-padding-horizontal: 0.75em !default
 
+$button-family: $control-family !default
+
 $button-hover-color: $link-hover !default
 $button-hover-border-color: $link-hover-border !default
 
@@ -48,6 +50,7 @@ $button-static-border-color: $grey-lighter !default
   border-width: $button-border-width
   color: $button-color
   cursor: pointer
+  font-family: $button-family
   justify-content: center
   padding-bottom: $button-padding-vertical
   padding-left: $button-padding-horizontal
