--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,5 +1,6 @@
 $title-color: $grey-darker !default
 $title-size: $size-3 !default
+$title-family: $family-primary !default
 $title-weight: $weight-semibold !default
 $title-line-height: 1.125 !default
 $title-strong-color: inherit !default
@@ -9,6 +10,7 @@ $title-sup-size: 0.75em !default
 
 $subtitle-color: $grey-dark !default
 $subtitle-size: $size-5 !default
+$subtitle-family: $family-secondary !default
 $subtitle-weight: $weight-normal !default
 $subtitle-line-height: 1.25 !default
 $subtitle-strong-color: $grey-darker !default
@@ -31,6 +33,7 @@ $subtitle-negative-margin: -1.25rem !default
 
 .title
   color: $title-color
+  font-family: $title-family
   font-size: $title-size
   font-weight: $title-weight
   line-height: $title-line-height
@@ -49,6 +52,7 @@ $subtitle-negative-margin: -1.25rem !default
 
 .subtitle
   color: $subtitle-color
+  font-family: $subtitle-family
   font-size: $subtitle-size
   font-weight: $subtitle-weight
   line-height: $subtitle-line-height
