--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -9,6 +9,8 @@ $control-line-height: 1.5 !default
 $control-padding-vertical: calc(0.375em - #{$control-border-width}) !default
 $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
 
+$control-family: $family-secondary !default
+
 =control
   -moz-appearance: none
   -webkit-appearance: none
@@ -17,6 +19,7 @@ $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default
   border-radius: $control-radius
   box-shadow: none
   display: inline-flex
+  font-family: $control-family
   font-size: $size-normal
   height: $control-height
   justify-content: flex-start
