--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -1,5 +1,6 @@
 $pagination-color: $grey-darker !default
 $pagination-border-color: $grey-lighter !default
+$pagination-family: $family-secondary !default
 $pagination-margin: -0.25rem !default
 $pagination-min-width: $control-height !default
 
@@ -25,6 +26,7 @@ $pagination-ellipsis-color: $grey-light !default
 $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 
 .pagination
+  font-family: $pagination-family
   font-size: $size-normal
   margin: $pagination-margin
   // Sizes
