--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,4 +1,5 @@
 $notification-background-color: $background !default
+$notification-family: $family-primary !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
@@ -6,6 +7,7 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
   @extend %block
   background-color: $notification-background-color
   border-radius: $notification-radius
+  font-family: $notification-family
   padding: $notification-padding
   position: relative
   a:not(.button):not(.dropdown-item)
