--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -67,6 +67,12 @@
   @each $placeholder in $placeholders
     &:#{$placeholder}-placeholder
       @content
+  
+=parallax
+  background-attachment: fixed
+  background-position: center
+  background-repeat: no-repeat
+  background-size: cover
 
 // Responsiveness
 
