#2091 remove css rule which causes has-addons to not work correctly (#2188)
* #2091 remove css rule which causes has-addons to not work correctly

* #2091 remove css rule which causes has-addons to not work correctly

* #2091 Don't include compiled css

* #2091 Don't include compiled css

--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -16,15 +16,6 @@ $tag-delete-margin: 1px !default
     margin-bottom: -0.5rem
   &:not(:last-child)
     margin-bottom: 1rem
-  &.has-addons
-    .tag
-      margin-right: 0
-      &:not(:first-child)
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
-      &:not(:last-child)
-        border-bottom-right-radius: 0
-        border-top-right-radius: 0
   &.is-centered
     justify-content: center
     .tag
@@ -37,6 +28,16 @@ $tag-delete-margin: 1px !default
         margin-left: 0.5rem
       &:not(:last-child)
         margin-right: 0
+  &.has-addons
+    .tag
+      margin-right: 0
+      &:not(:first-child)
+        margin-left: 0
+        border-bottom-left-radius: 0
+        border-top-left-radius: 0
+      &:not(:last-child)
+        border-bottom-right-radius: 0
+        border-top-right-radius: 0
 
 .tag:not(body)
   align-items: center
