--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -104,7 +104,8 @@ $button-static-border-color: $grey-lighter !default
     &.is-active
       background-color: darken($button-text-hover-background-color, 5%)
       color: $button-text-hover-color
-    &[disabled]
+    &[disabled],
+    fieldset[disabled] &
       background-color: transparent
       border-color: transparent
       box-shadow: none
@@ -131,7 +132,8 @@ $button-static-border-color: $grey-lighter !default
         background-color: darken($color, 5%)
         border-color: transparent
         color: $color-invert
-      &[disabled]
+      &[disabled],
+      fieldset[disabled] &
         background-color: $color
         border-color: transparent
         box-shadow: none
@@ -140,7 +142,8 @@ $button-static-border-color: $grey-lighter !default
         color: $color
         &:hover
           background-color: darken($color-invert, 5%)
-        &[disabled]
+        &[disabled],
+        fieldset[disabled] &
           background-color: $color-invert
           border-color: transparent
           box-shadow: none
@@ -160,7 +163,8 @@ $button-static-border-color: $grey-lighter !default
         &.is-loading
           &::after
             border-color: transparent transparent $color $color !important
-        &[disabled]
+        &[disabled],
+        fieldset[disabled] &
           background-color: transparent
           border-color: $color
           box-shadow: none
@@ -173,7 +177,8 @@ $button-static-border-color: $grey-lighter !default
         &:focus
           background-color: $color-invert
           color: $color
-        &[disabled]
+        &[disabled],
+        fieldset[disabled] &
           background-color: transparent
           border-color: $color-invert
           box-shadow: none
@@ -186,7 +191,8 @@ $button-static-border-color: $grey-lighter !default
   &.is-large
     +button-large
   // Modifiers
-  &[disabled]
+  &[disabled],
+  fieldset[disabled] &
     background-color: $button-disabled-background-color
     border-color: $button-disabled-border-color
     box-shadow: $button-disabled-shadow
