--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -16,6 +16,22 @@ $tag-delete-margin: 1px !default
     margin-bottom: -0.5rem
   &:not(:last-child)
     margin-bottom: 1rem
+  // Sizes
+  &.are-medium
+    .tag
+      font-size: $size-normal
+  &.are-large
+    .tag
+      font-size: $size-medium  
+  &.has-addons
+    .tag
+      margin-right: 0
+      &:not(:first-child)
+        border-bottom-left-radius: 0
+        border-top-left-radius: 0
+      &:not(:last-child)
+        border-bottom-right-radius: 0
+        border-top-right-radius: 0
   &.is-centered
     justify-content: center
     .tag
