--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -18,11 +18,11 @@ $tag-delete-margin: 1px !default
     margin-bottom: 1rem
   // Sizes
   &.are-medium
-    .tag
+    .tag:not(.is-normal):not(.is-large)
       font-size: $size-normal
   &.are-large
-    .tag
-      font-size: $size-medium  
+    .tag:not(.is-normal):not(.is-medium)
+      font-size: $size-medium
   &.has-addons
     .tag
       margin-right: 0
@@ -79,6 +79,8 @@ $tag-delete-margin: 1px !default
       background-color: $color
       color: $color-invert
   // Sizes
+  &.is-normal
+    font-size: $size-small
   &.is-medium
     font-size: $size-normal
   &.is-large
