#1646 Make links black when they are contained in a is-link element so they will be visible

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -65,9 +65,10 @@ a
   text-decoration: none
   strong
     color: currentColor
+  .is-link &
+    color: $black
   &:hover
     color: $link-hover
-
 code
   background-color: $code-background
   color: $code
